tests/neg/i6716.check
-- Error: tests/neg/i6716.scala:12:39 ----------------------------------------------------------------------------------
12 |  given Monad[Bar] = summon[Monad[Foo]] // error
   |                                       ^
   |                                       Warning: result of implicit search for Monad[Foo] will change.
   |                                       current result: given instance given_Monad_Bar in object Bar
   |                                       result with -source future: object given_Monad_Foo in object Foo
